--- a/Class_02/index.html
+++ b/Class_02/index.html
@@ -3,17 +3,19 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="./styles/mystyle.css">
-<link rel="stylesheet" type="text/css" href="C:">
+<!--<link rel="stylesheet" type="text/css" href="C:\Users\Ilvija Bauska\OneDrive - Jelgavas Tehnoloģiju vidusskola\Darbvirsma\Kursi_JavaScript\DialogsAB_JS\DialogsAB_JS\Class_02\mystyle.css">-->
 <style>
 h1 {
-  color: orange;
+  color: rgb(223, 9, 9);
 }
 </style>
 </head>
 <body>
 
-<h1>This is a heading</h1>
-<p>The style of this document is a combination of an external stylesheet, and internal style</p>
 
+<h1>This is a heading</h1>
+<p>Pirmais stils</p>
+<p>Otrais stils</p>
+<script>consolle.log("Čau visiem");</script>
 </body>
 </html>
