--- a/Class_02/index.html
+++ b/Class_02/index.html
@@ -16,6 +16,6 @@ h1 {
 <h1>This is a heading</h1>
 <p>Pirmais stils</p>
 <p>Otrais stils</p>
-<script>consolle.log("Čau visiem");</script>
+<script>console.log("Čau visiem");</script>
 </body>
 </html>
