--- a/Class_07/index.html
+++ b/Class_07/index.html
@@ -12,9 +12,12 @@
     <p id="demo_if">Good Morning!</p>
     <p id="demo_switch">Today is ...</p>
 
-    <script src="./scripts/script_if.js"></script>
-    <script src="./scripts/script_switch.js"></script>
-    <script src="./scripts/script_while.js"></script>
+    <script src="./scripts/script_main1.js"></script>
+    <script src="./scripts/script_dils2.js"></script>
+    <script src="./scripts/script_dazad3.js"></script>
+    <script src="./scripts/script_dazad4.js"></script>
+    <script src="./scripts/script_cetri5.js"></script>
+    <script src="./scripts/script_Whileun if.js"></script>
 </body>
 
 </html>
