--- a/Class_07/index.html
+++ b/Class_07/index.html
@@ -11,6 +11,7 @@
 
     <p id="demo_if">Good Morning!</p>
     <p id="demo_switch">Today is ...</p>
+    <p id="demo"></p>
 
     <script src="./scripts/script_main1.js"></script>
     <script src="./scripts/script_dils2.js"></script>
@@ -18,6 +19,7 @@
     <script src="./scripts/script_dazad4.js"></script>
     <script src="./scripts/script_cetri5.js"></script>
     <script src="./scripts/script_Whileun if.js"></script>
+    <script src="./scripts/script_burb.js"></script>
 </body>
 
 </html>
