--- a/Class_08/index.html
+++ b/Class_08/index.html
@@ -16,6 +16,10 @@
         <input type="submit" value="Submit">
       </form>
 
+      <br>
+
+      <img src="" id="image" alt="Dog picture">
+
     <script src="./scripts/script.js"></script>
 </body>
 
