--- a/Class_10/index.html
+++ b/Class_10/index.html
@@ -8,7 +8,8 @@
 <body>
   
     <p id="demo"></p>
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/script1.js"></script>
+    <script src="./scripts/script2.js"></script>
 </body>
 
 </html>
