--- a/Class_11/index.html
+++ b/Class_11/index.html
@@ -2,12 +2,18 @@
 <html>
 
 <head>
-    
+    <link rel="stylesheet" href="./styles/mystyle.css">  
 </head>
 
 <body>
   
-    <p id="demo"></p>
+    <p>JavaScript setTimeout Demo</p>
+    <button onclick="showAlert();">Show</button>
+    <button onclick="cancelAlert();">Cancel</button>
+    <p id="flashtext">JavaScript setInterval Demo</p>
+    <button id="start" onclick="start();">Start</button>
+    <button onclick="stop();">Stop</button>
+
     <script src="./scripts/script.js"></script>
     
 </body>
